--- a/package.json
+++ b/package.json
@@ -90,6 +90,8 @@
     "react-dates": "^12.3.0",
     "react-dom": "^15.4.2",
     "react-dropzone": "^3.11.0",
+    "react-geocode": "^0.0.7",
+    "react-google-maps": "^9.4.5",
     "react-highlight": "^0.10.0",
     "react-file-reader-input": "^1.1.4",
     "react-hot-loader": "^1.3.1",
