--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "autoprefixer": "^6.7.0",
     "axios": "^0.16.2",
     "babel-core": "^6.25.0",
-    "babel-eslint": "^4.1.3",
+    "babel-eslint": "^8.2.3",
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-rewire": "^0.1.22",
@@ -49,8 +49,16 @@
     "deep-equal": "^1.0.1",
     "enzyme": "^2.9.1",
     "enzyme-to-json": "^1.5.1",
-    "eslint": "^1.7.3",
-    "eslint-plugin-react": "^3.16.1",
+    "eslint": "^4.19.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-flowtype": "^2.47.1",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-standard": "^3.1.0",
     "expect": "^1.12.2",
     "file-loader": "^1.1.11",
     "flow-babel-webpack-plugin": "^1.1.1",
