--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,8 @@
 {
   "presets": ["env", "stage-1", "react"],
   "plugins": [
+    "transform-async-to-bluebird",
+		"transform-promise-to-bluebird",
     "transform-decorators-legacy",
     "transform-runtime",
     [
