--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "babel-loader": "^7.1.1",
     "babel-plugin-rewire": "^0.1.22",
     "babel-plugin-root-import": "^5.1.0",
+    "babel-plugin-transform-async-to-bluebird": "^1.1.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-promise-to-bluebird": "^1.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
@@ -41,6 +43,7 @@
     "bootstrap": "4.0.0-beta.2",
     "boss-iscroll": "git+https://github.com/jsmbars/iscroll.git#6da2b1ceefd1e995bfed86bcedbc7f02c5e1d399",
     "bowser": "^1.6.0",
+    "browser-unhandled-rejection": "^1.0.2",
     "classnames": "^2.2.5",
     "cleave.js": "^1.0.9",
     "cropperjs": "^0.5.6",
