--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "deep-equal": "^1.0.1",
     "enzyme": "^2.9.1",
     "enzyme-to-json": "^1.5.1",
+    "es-abstract": "^1.12.0",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0",
