--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "jquery": "^2.2.0",
     "jquery-ui": "1.10.5",
     "lodash": "^4.17.4",
+    "memoize-one": "^4.0.2",
     "minimatch": "3.0.4",
     "moment": "^2.17.1",
     "moment-duration-format": "^2.2.2",
