--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "lodash": "^4.17.4",
     "minimatch": "3.0.4",
     "moment": "^2.17.1",
+    "moment-duration-format": "^2.2.2",
     "moment-range": "^4.0.0",
     "node-sass": "^4.5.3",
     "numeral": "^2.0.6",
@@ -98,10 +99,10 @@
     "react-dates": "^12.3.0",
     "react-dom": "^15.4.2",
     "react-dropzone": "^3.11.0",
+    "react-file-reader-input": "^1.1.4",
     "react-geocode": "^0.0.7",
     "react-google-maps": "^9.4.5",
     "react-highlight": "^0.10.0",
-    "react-file-reader-input": "^1.1.4",
     "react-hot-loader": "^1.3.1",
     "react-immutable-proptypes": "^2.1.0",
     "react-iscroll": "^2.0.3",
@@ -132,7 +133,7 @@
     "redux-actions": "^2.2.1",
     "redux-api-middleware": "^2.3.0",
     "redux-batch-middleware": "^0.2.0",
-    "redux-form": "^7.2.0",
+    "redux-form": "^7.4.2",
     "redux-immutable": "^4.0.0",
     "redux-observable": "^0.13.0",
     "redux-saga": "^0.16.0",
