Setup WTL_VERIFY_EMAIL_ROOT_URL

--- a/config/application.yml
+++ b/config/application.yml
@@ -6,6 +6,7 @@ development:
   ABLY_API_KEY: "vpodeg.2ry9lg:ZDrSurrr9el4nha-"
   RERAISE_SSE_ERRORS: "true"
   USE_SUBDOMAINS: "false"
+  WTL_VERIFY_EMAIL_ROOT_URL: ""
 test:
   REDIS_DB: "1"
   REDIS_URL: "redis://localhost:6379"
@@ -13,3 +14,4 @@ test:
   ROLLBAR_API_ACCESS_TOKEN: "xxx-placeholder-rollbar-api-token-xxx"
   RERAISE_SSE_ERRORS: "true"
   USE_SUBDOMAINS: "false"
+  WTL_VERIFY_EMAIL_ROOT_URL: ""
