Update staff member endpoints

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,6 @@
 REDIS_URL = "redis://localhost:6379"
 DATABASE_URL = "mysql2://root@localhost/boss_development"
+AWS_ACCESS_KEY_ID = ""
+AWS_SECRET_ACCESS_KEY = ""
+S3_BACKUP_REGION = ""
+S3_ASSETS_BUCKET = "bucket"
